borService added + properties + apache commonlangs dep + telegram-spring-boot-starter

--- a/tgbot/tgbot/src/main/resources/application.properties
+++ b/tgbot/tgbot/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.username=postgres
 spring.datasource.password = ErKn8uPg
 server.port = 9090
 cbr.api.url=http://www.cbr.ru/dailyinfowebserv/dailyinfo.asmx?wsdl
+bot.name=get_cbr_curr_bot
+bot.api.key=7029244709:AAHNcDhJCmZMvdOAc19MVLtCCmPuWK-qKBs
