--- a/tgbot/tgbot/pom.xml
+++ b/tgbot/tgbot/pom.xml
@@ -94,11 +94,13 @@
 			<artifactId>jaxb-impl</artifactId>
 			<version>2.3.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.telegram/telegrambots-spring-boot-starter -->
 		<dependency>
-			<groupId>com.github.xabgesagtx</groupId>
-			<artifactId>telegram-spring-boot-starter</artifactId>
-			<version>0.24</version>
+			<groupId>org.telegram</groupId>
+			<artifactId>telegrambots-spring-boot-starter</artifactId>
+			<version>6.8.0</version>
 		</dependency>
+
 
 		<!-- xml.ws module -->
 		<dependency>
