--- a/tgbot/tgbot/src/main/resources/application.properties
+++ b/tgbot/tgbot/src/main/resources/application.properties
@@ -7,3 +7,4 @@ server.port = 9090
 cbr.api.url=http://www.cbr.ru/dailyinfowebserv/dailyinfo.asmx?wsdl
 bot.name=@get_cbr_curr_bot
 bot.api.key=7029244709:AAHNcDhJCmZMvdOAc19MVLtCCmPuWK-qKBs
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
