--- a/tgbot/tgbot/src/main/resources/application.properties
+++ b/tgbot/tgbot/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=tgbot
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/TGbot
+spring.datasource.url=jdbc:postgresql://localhost:5432/TGbot-replica
 spring.datasource.username=postgres
 spring.datasource.password = ErKn8uPg
 server.port = 9090
@@ -8,3 +8,6 @@ cbr.api.url=http://www.cbr.ru/dailyinfowebserv/dailyinfo.asmx?wsdl
 bot.name=@get_cbr_curr_bot
 bot.api.key=7029244709:AAHNcDhJCmZMvdOAc19MVLtCCmPuWK-qKBs
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.initialization-mode=always
+spring.datasource.data=classpath:data.sql
